--- a/styles.css
+++ b/styles.css
@@ -1,31 +1,19 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap");
-
-:root {
-  --primary-color: #083268;
-  --off-white: #f3f4f6;
-  --dark-gray: #6b7280;
-}
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;1,400&family=Rozha+One&display=swap");
 
 body {
-  font-family: "Montserrat", sans-serif;
+  font-family: 'Rozha One', serif;
   margin: 0px auto;
   max-width: 85%;
   width: 100%;
-}
+  background-color: rgb(192, 183, 183);
 
-hr {
-  margin: 2rem 0rem;
-}
-
-.margin-md {
-  margin: 2rem;
 }
 
 .container {
   padding: 0rem 1rem;
 }
 
-.container-center {
+.containerCenter {
   max-width: 900px;
   width: 100%;
   margin: auto;
@@ -37,31 +25,39 @@ hr {
   padding: 0.5rem 1rem;
 }
 
-.link-primary {
+.link1 {
   max-width: 140px;
   padding: 0.6rem 1.2rem;
-  background-color: var(--primary-color);
+  background-color: #000000;
   color: #fff;
   margin: 1rem auto;
   border-radius: 2rem;
 }
 
-.link-secondary {
+.link:hover {
+  background-color: #75a4e1;
+  border-radius: 2rem;
+}
+
+.link2 {
   max-width: 140px;
   margin: 1rem;
   padding: 0.6rem 1.2rem;
   border-radius: 2rem;
-  border: 1px solid var(--primary-color);
-  color: var(--primary-color);
+  border: 1px solid #682b08;
+  color: #75a4e1;
 }
 
+.link2:hover {
+  background-color: rgb(223, 240, 72);
+}
 
-.list-non-bullet {
+.listBullet {
   list-style: none;
   padding-inline-start: 0px;
 }
 
-.list-item-inline {
+.listItemInline {
   display: inline;
   padding: 0rem 0.5rem;
 }
@@ -69,55 +65,58 @@ hr {
 
 
 .navigation {
-  background-color: var(--primary-color);
+  background-color: #7d6081;
   color: white;
   padding: 1rem;
   border-bottom-left-radius: 1rem;
+  border-bottom-right-radius: 1rem;
 }
 
-.navigation .nav-brand {
+.navigation .navName {
   font-weight: bold;
 }
 
-.nav-brand a {
+.navName a {
   text-decoration: none;
   color: inherit;
 }
 
-.navigation .nav-pills {
+.navigation .navMain {
   text-align: right;
-  margin: 0.6rem 1rem;
+  margin: 0.5rem 0rem;
 }
 
 .navigation .link {
   color: white;
 }
 
-.navigation .link-active {
+.navigation .activePage {
   font-weight: bold;
+  background-color: #75a4e1;
+  border-radius: 1rem;
 }
 
 
-.hero {
+.mainHeader {
   padding: 2rem;
   padding-top: 5rem;
 }
 
-.hero .hero-img {
+.mainHeader .mainHeader-img {
   max-width: 80%;
   width: 550px;
   display: block;
   margin: auto;
 }
 
-.hero .hero-heading {
+.mainHeader .mainHeader-heading {
   text-align: center;
   padding-top: 1rem;
-  color: var(--dark-gray);
+  color: #6b7280;
 }
 
-.hero .hero-heading .heading-inverted {
-  color: var(--primary-color);
+.mainHeader .mainHeader-heading .headingBold {
+  color: #083268;
 }
 
 .section {
@@ -131,15 +130,17 @@ hr {
   text-align: center;
 }
 
-.ow {
-  background-color: var(--off-white);
+.box {
+  background-color: #f3f4f6;
+  box-shadow:-13px -1px 9px 4px
 }
 
 .footer {
-  background-color: var(--primary-color);
+  background-color: #7d6081;
   padding: 2rem 1rem;
   text-align: center;
   color: white;
+  border-top-left-radius: 1rem;
   border-top-right-radius: 1rem;
 }
 
@@ -156,41 +157,28 @@ hr {
   padding-inline-start: 0px;
 }
 
-.showcase-list {
-  
+.mainListBox {
+
   padding: 2rem;
   border-radius: 1rem;
   text-align: center;
   margin: 3rem auto;
 }
-.showcase-list h1 {
+
+.mainListBox h1 {
   margin: 0.5rem;
 }
 
-.showcase-list p {
+.mainListBox p {
   padding-bottom: 1rem;
 }
 
-.showcase-blog {
+.mainListBox-blog {
   padding-bottom: 6rem;
-}
-
-@media (max-width: 900px) {
-  body {
-    max-width: 95%;
-    width: 100%;
-  }
-
-  .list-item-inline {
-    display: inline;
-    padding: 0rem;
-  }
-
-  .container-center {
-    width: auto;
-  }
-
-  .link-primary {
-    display: block;
-  }
+  border: 2px solid black;
+  padding: 3rem;
+  border-radius: 5rem;
+  margin-bottom: 2rem;
+  text-align: center;
+  background-color: #6b7280;
 }
